--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "material-design-icons-iconfont": "^6.7.0",
     "mitt": "^3.0.1",
     "pinia": "^2.2.1",
+    "swiper": "^8.4.7",
     "vue": "^3.4.35",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.4.3",
     "vuetify": "^3.6.14"
   },
